--- a/r-statistics.co/ggplot2 Tutorial 1 - Intro.ipynb
+++ b/r-statistics.co/ggplot2 Tutorial 1 - Intro.ipynb
@@ -694,6 +694,16 @@
   }
  ],
  "metadata": {
+  "_draft": {
+   "nbviewer_url": "https://gist.github.com/03e5111c3d92e71f8288341b4ef2da41"
+  },
+  "gist": {
+   "data": {
+    "description": "r-statistics.co/ggplot2 Tutorial 1 - Intro.ipynb",
+    "public": false
+   },
+   "id": "03e5111c3d92e71f8288341b4ef2da41"
+  },
   "kernelspec": {
    "display_name": "R",
    "language": "R",
@@ -706,6 +716,45 @@
    "name": "R",
    "pygments_lexer": "r",
    "version": "3.4.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
